# Advertisements_back

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  example.env  pyproject.toml
Advertisements/samplesite/: db.sqlite3
Advertisements/samplesite/bboard/: admin.py  models.py  views.py
Advertisements/samplesite/samplesite/: urls.py
bboard/: admin.py  filtres.py  forms.py  models.py  serializers.py  urls.py  views.py
bboard/migrations/: 0001_initial.py  0002_rubric_alter_bb_options_alter_bb_content_and_more.py  0003_bb_image.py
persons/: models.py  serializers.py  urls.py  views.py
persons/migrations/: 0001_initial.py  0002_customuser_is_staff_alter_customuser_password.py  0003_alter_customuser_rating.py
samplesite/: settings.py  urls.py
src/: manage.py
src/adv_core/: asgi.py  settings.py  urls.py  wsgi.py
src/app_auth/: base_auth.py  base_permissions.py  permissions.py  serializers.py  urls.py  views.py
src/app_board/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/app_complaints/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/app_reviews/: models.py  serializers.py  urls.py  views.py
src/app_users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/bboard/: filtres.py  models.py  views.py
src/samplesite/: settings.py  urls.py
src/users/: admin.py  views.py
src/сomplaints/: serializers.py
users/: admin.py  apps.py  authentication.py  models.py  serializers.py  urls.py  views.py
сomplaints/: admin.py  apps.py  models.py  serializers.py  views.py
(+17 files in other folders)
